force-app/main/default/objects/Shared_Calendar_Prefs__c/Shared_Calendar_Prefs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Shared Calendar Prefs</label>
</CustomObject>