force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Recent_Calendar_Type__c</fullName>
    <label>Recent Calendar Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>