force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Children__c.field-meta.xml
<CustomField>
    <fullName>Recent_Children__c</fullName>
    <label>Recent Children</label>
    <length>44</length>
    <type>Text</type>
</CustomField>