force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Recent_Contacts__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <label>Recent Contacts</label>
    <length>44</length>
    <type>Text</type>
</CustomField>