force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Date__c</fullName>
    <defaultValue>TEXT( DAY(TODAY()) )</defaultValue>
    <label>Recent Date</label>
    <length>125</length>
    <type>Text</type>
</CustomField>