force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Filter__c.field-meta.xml
<CustomField>
    <fullName>Recent_Filter__c</fullName>
    <label>Recent Filter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>