force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>Recent_Filter_Name__c</fullName>
    <label>Recent Filter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>