force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Month__c.field-meta.xml
<CustomField>
    <fullName>Recent_Month__c</fullName>
    <defaultValue>TEXT( MONTH(TODAY())-1 )</defaultValue>
    <label>Recent Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>