force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Recent_Opportunities__c</fullName>
    <label>Recent Opportunities</label>
    <length>18</length>
    <type>Text</type>
</CustomField>