force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Record__c.field-meta.xml
<CustomField>
    <fullName>Recent_Record__c</fullName>
    <label>Recent Record</label>
    <length>128</length>
    <type>Text</type>
</CustomField>