force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_View__c.field-meta.xml
<CustomField>
    <fullName>Recent_View__c</fullName>
    <label>Recent View</label>
    <length>44</length>
    <type>Text</type>
</CustomField>