force-app/main/default/objects/Shared_Calendar_Prefs__c/fields/Recent_Year__c.field-meta.xml
<CustomField>
    <fullName>Recent_Year__c</fullName>
    <defaultValue>TEXT( YEAR(TODAY()) )</defaultValue>
    <label>Recent Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>